# draco-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
draco/: .gitrepo  README.md
draco/src/draco/attributes/: geometry_indices.h  point_attribute.cc  point_attribute.h
draco/src/draco/compression/: decode.h
draco/src/draco/compression/mesh/: mesh_edgebreaker_decoder_impl.cc
draco/src/draco/core/: draco_index_type.h  encoder_buffer.h
draco/src/draco/io/: ply_decoder.cc
draco/src/draco/mesh/: corner_table.cc  mesh.h  mesh_cleanup.cc  mesh_indices.h
draco/src/draco/point_cloud/: point_cloud.cc  point_cloud.h  point_cloud_builder.cc  point_cloud_builder.h
draco/src/draco/scene/: scene_indices.h
examples/: encode.rs  encode_decode.rs  load_mesh.rs
src/: attribute.rs  bindgen.rs  converter.rs  decode.rs  encode.rs  extra.h  lib.rs  pointcloud.rs  utils.rs
