[package]
name = "draco-rs"
version = "0.1.2"
authors = ["Tin Lai <tin@tinyiu.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/soraxas/draco-rs"
description = "Rust-bindings to the c++ draco library, for compressing and decompressing 3D geometric meshes and point clouds."
readme = "README.md"


[dependencies]
cxx = "1.0.78"
# 0.30.0 does not compile at the moment (see https://github.com/google/autocxx/issues/1480)
autocxx = { version = "0.28" }

[build-dependencies]
cmake = "0.1.54"
autocxx-build = { version = "0.28" }
miette = { version = "5", features = ["fancy"] }

